--- a/views/default/index.html
+++ b/views/default/index.html
@@ -15,3 +15,9 @@
     </p>
 {{pass}}
 </ul>
+<p>
+{{=LI(A("Neuer Wunsch", _href=URL("wunsch")))}}
+</p>
+<p>
+{{=LI(A("Einkäufe speichern", _href=URL("notieren")))}}
+</p>
